deploy: f1a0813df454c75fc79eed13246fb10e4e6c7cf7

--- a/about/index.html
+++ b/about/index.html
@@ -120,7 +120,30 @@
     <h1>About</h1>
   </div>
   <div class="page-content">
-    <p><a href="/wqt/info/###Tools used by this website">Tools used by this website</a></p>
+    <h2 id="tools-used-by-this-website">Tools used by this website</h2>
+<ul>
+  <li><a href="https://jekyllrb.com/">Jekyll</a></li>
+  <li><a href="https://katex.org/">Katex</a> for Latex rendering</li>
+  <li><a href="https://github.com/ghosind/Jekyll-Paper-GithubA">Theme</a></li>
+  <li><a href="https://github.com/utterance/utterances">utterances</a> for github contact form</li>
+</ul>
+
+<!-- ### Todo
+ - [x] References footnote
+ - [x] Side notes in posts
+ - [x] Add footnotes
+ - [ ] "Abstract"
+ - [ ] Contents
+ - [ ] Change logo of website
+ - [ ] Search on a website
+ - [ ] better code snippets
+ - [x] add contact me with github form
+ - [x] Add numbering of posts -->
+
+<h2 id="contact-me">Contact me</h2>
+<script src="https://utteranc.es/client.js" repo="yakimk/wqt" issue-term="pathname" label="comment" theme="github-light" crossorigin="anonymous" async="">
+</script>
+
 
   </div>
 </article>
