deploy: 0cea495496befe7da0e2da969bba3c578d84e4bc

--- a/about/index.html
+++ b/about/index.html
@@ -133,12 +133,15 @@
  - [x] Side notes in posts
  - [x] Add footnotes
  - [ ] "Abstract"
- - [ ] Contents
+ - [x] Contents
  - [ ] Change logo of website
  - [ ] Search on a website
  - [ ] better code snippets
  - [x] add contact me with github form
- - [x] Add numbering of posts -->
+ - [x] Add numbering of posts
+ - [ ] Add numbering to headers
+ - [ ] Remove numbering of Footnote and References headers in TOC
+ -->
 
 <h2 id="contact-me">Contact me</h2>
 <script src="https://utteranc.es/client.js" repo="yakimk/wqt" issue-term="pathname" label="comment" theme="github-light" crossorigin="anonymous" async="">
