deploy: 643f846e265f5a87a2aea2fed1123a5fbaf999f2

--- a/about/index.html
+++ b/about/index.html
@@ -132,15 +132,15 @@
  - [x] References footnote
  - [x] Side notes in posts
  - [x] Add footnotes
- - [ ] "Abstract"
+ - [x] "Abstract"
  - [x] Contents
  - [ ] Change logo of website
  - [ ] Search on a website
  - [ ] better code snippets
  - [x] add contact me with github form
  - [x] Add numbering of posts
- - [ ] Add numbering to headers
- - [ ] Remove numbering of Footnote and References headers in TOC
+ - [ ] Add optional numbering to headers
+ - [ ] Remove numbering of Footnote, Abstract and References headers in TOC
  -->
 
 <h2 id="contact-me">Contact me</h2>
